--- a/dekstop/multiscroll/css/style.css
+++ b/dekstop/multiscroll/css/style.css
@@ -1,3 +1,4 @@
+/* Basic style */
 :root {
   --transition-duration: 600ms;
 }
@@ -17,7 +18,9 @@ body {
   overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
 }
+/* Basic style */
 
+/* Buttons navigations */
 .dots-navigate {
   top: 0;
   right: 0;
@@ -45,38 +48,40 @@ body {
   transform: scale(1.4);
   background-color: #292323;
 }
+/* Buttons navigations */
 
+/* Slide */
 .slides-container {
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-.slide-wrapper {
+.slide {
   width: 100%;
   height: 100%;
   position: absolute;
 }
 
-.slide-wrapper[data-slide-type="multi"] {
+.slide[data-slide-type="multi"] {
   display: flex;
 }
 
-.slide-wrapper-wrap {
+.slide__multi {
   width: 50%;
   height: 100%;
   position: relative;
   transition: transform var(--transition-duration) ease-in-out;
 }
 
-.slide-wrapper-full {
+.slide__full {
   width: 100%;
   height: 100%;
   position: relative;
   transition: transform var(--transition-duration) ease-in-out;
 }
 
-.slide-content {
+.slide__content {
   width: 100%;
   color: #fff;
   height: 100%;
@@ -86,8 +91,9 @@ body {
   justify-content: center;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
+/* Slide */
 
-/* Full slide */
+/* Background color for slide content */
 .slide-1-full {
   background-color: #008000;
 }
@@ -103,9 +109,7 @@ body {
 .slide-8-full {
   background-color: #735959;
 }
-/* Full slide */
 
-/* Multi slide */
 .slide-2-left {
   background-color: #ff0000;
 }
@@ -161,49 +165,49 @@ body {
 .slide-10-right {
   background-color: #c26778;
 }
-/* Multi slide */
+/* Background color for slide content */
 
 @media screen and (max-width: 992px) {
+  /* Basic style */
   body {
     width: auto;
     height: auto;
     overflow-y: visible;
   }
+  /* Basic style */
 
+  /* Buttons navigations */
   .dots-navigate {
     display: none;
   }
+  /* Buttons navigations */
 
-  .slides-container .slide-wrapper {
-    display: block;
-  }
-
-  .slide-wrapper-wrap {
-    width: 100%;
-    height: auto;
-    position: static;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    transform: translateY(0%) !important;
-  }
-
-  .slide-wrapper-full {
-    width: 100%;
-    height: auto;
-    position: static;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    transform: translateY(0%) !important;
-  }
-
-  .slide-wrapper {
+  /* Slide */
+  .slide {
     z-index: auto;
     position: static;
   }
 
-  .slide {
-    font-size: 30px;
-    padding-left: 6px;
-    padding-right: 6px;
+  .slide[data-slide-type="multi"] {
+    display: block;
   }
+
+  .slides-container .slide__multi {
+    display: block;
+  }
+
+  .slide__multi {
+    width: 100%;
+    height: auto;
+    position: static;
+    transform: translateY(0%) !important;
+  }
+
+  .slide__full {
+    width: 100%;
+    height: auto;
+    position: static;
+    transform: translateY(0%) !important;
+  }
+  /* Slide */
 }
