--- a/mobile/swipe/swipe-4/css/core.css
+++ b/mobile/swipe/swipe-4/css/core.css
@@ -9,9 +9,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	overflow-y: hidden;
-	overflow-x: hidden;
-	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
 }
 
 .mys-slides-container {
@@ -19,13 +17,10 @@ body {
 
 	width: 100vw;
 	height: 100vh;
-	position: relative;
-	transition: transform 100ms linear;
+	transition: transform var(--mys-swipe-slide-transition-duration) linear;
 }
 
 .mys-slide {
 	width: 100%;
 	height: 100%;
-	position: absolute;
-	transition: transform var(--mys-swipe-slide-transition-duration) linear;
 }
