--- a/examples/landing-page/css/core.css
+++ b/examples/landing-page/css/core.css
@@ -73,6 +73,6 @@ body {
 		width: 100%;
 		height: auto;
 		position: static;
-		transform: translateY(0%) !important;
+		transform: translate3d(0 0, 0) !important;
 	}
 }
